--- a/README.org
+++ b/README.org
@@ -2,18 +2,13 @@
   This library is a Bigloo port of Takashi Kato's [[https://github.com/ktakashi/scheme-concurrent][scheme-concurrent]]
   library.
 
-  Currently, all tests pass for the native backend but a couple tests
-  are still not passing for the jvm backend. 
-
 ** Documentation
   The best documentation at this point is Takashi Kato's original
   [[http://ktakashi.github.io/sagittarius-ref.html#concurrent][documentation]]. Bigloo-specific documentation still needs to be
   created.
 
 ** Requirements
-   bigloo-concurrent currently depends on a modified version of the
-   bigloo-included pthread library found [[https://github.com/donaldsonjw/bigloo-1/tree/pthread_modifications][here]][fn::The changes have
-   been submitted [[https://github.com/manuel-serrano/bigloo/pull/47][upstream]]] and a bigloo port of
+   bigloo-concurrent depends on a bigloo port of
    [[https://github.com/donaldsonjw/srfi117][srfi117]].
    
 ** Building
